gcc/testsuite/rust/rustc/ui/inline-const/expr-unsafe-err.rs
const unsafe fn require_unsafe() -> usize {
    1
}

fn main() {
    const {
        require_unsafe();
// { dg-error ".E0133." "" { target *-*-* } .-1 }
    }
}

